WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
72612
[Qt][WK2] REGRESSION(100483): It made 2 API tests fail
https://bugs.webkit.org/show_bug.cgi?id=72612
Summary
[Qt][WK2] REGRESSION(100483): It made 2 API tests fail
Csaba Osztrogonác
Reported
2011-11-17 07:58:15 PST
FAIL! : qmltests::DesktopWebViewLinkHovered::test_linkHovered() 'wait for signal linkHovered' returned FALSE. () Loc: [/usr/local/Trolltech/Qt5/Qt-5.0.0-r11/imports/QtTest/TestCase.qml(473)] FAIL! : qmltests::DesktopWebViewLinkHovered::test_linkHoveredDoesntEmitRepeated() 'wait for signal linkHovered' returned FALSE. () Loc: [/usr/local/Trolltech/Qt5/Qt-5.0.0-r11/imports/QtTest/TestCase.qml(473)]
Attachments
Patch
(1.42 KB, patch)
2011-11-21 11:19 PST
,
Alexis Menard (darktears)
no flags
Details
Formatted Diff
Diff
Patch
(4.17 KB, patch)
2011-11-21 13:29 PST
,
Alexis Menard (darktears)
kenneth
: review+
kenneth
: commit-queue-
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Alexis Menard (darktears)
Comment 1
2011-11-21 09:59:58 PST
Grab it, I'm on it.
Alexis Menard (darktears)
Comment 2
2011-11-21 11:19:36 PST
Created
attachment 116108
[details]
Patch
Tor Arne Vestbø
Comment 3
2011-11-21 12:29:05 PST
Comment on
attachment 116108
[details]
Patch It should not be necessary for the user of the API to do this themselves. We should fix it in WebKit, not in a test.
Alexis Menard (darktears)
Comment 4
2011-11-21 12:57:20 PST
(In reply to
comment #3
)
> (From update of
attachment 116108
[details]
) > It should not be necessary for the user of the API to do this themselves. We should fix it in WebKit, not in a test.
Well QML doesn't have a concept of default focus item... Ok let's say the view as the focus then we need to fix bool QtWebPageProxy::isViewFocused() { return m_qmlWebPage->hasFocus(); } to bool QtWebPageProxy::isViewFocused() { return m_qmlWebView->hasFocus(); } which I did first.
Alexis Menard (darktears)
Comment 5
2011-11-21 13:29:28 PST
Created
attachment 116125
[details]
Patch
Kenneth Rohde Christiansen
Comment 6
2011-11-21 13:33:56 PST
Comment on
attachment 116125
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=116125&action=review
> Source/WebKit2/UIProcess/API/qt/qquickwebview_p.h:119 > + virtual void focusInEvent(QFocusEvent *); > + virtual void focusOutEvent(QFocusEvent *);
wrong coding style
Alexis Menard (darktears)
Comment 7
2011-11-21 13:45:47 PST
Committed
r100955
: <
http://trac.webkit.org/changeset/100955
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug