Source/WebKit2/UIProcess/API/qt/qquickwebpage_p.h
@@ -72,6 +72,7 @@ private:
     Q_PRIVATE_SLOT(d, void _q_onSceneGraphInitialized());
 
     QQuickWebPagePrivate* d;
+    friend class QQuickWebView;
     friend class QQuickWebViewPrivate;
     friend class QtWebPageProxy;
 };
