Source/WebKit2/UIProcess/API/qt/tests/qmltests/DesktopBehavior/tst_linkHovered.qml
@@ -7,6 +7,7 @@ DesktopWebView {
     id: webView
     width: 200
     height: 400
+    focus: true
 
     property string lastUrl
     property string lastTitle
